2008-02-08 Sarka Todorova <sarka.todorova@cern.ch>
	* auppress printout of geometry volume tree
	* tagged as MuonTrackingGeometry-00-01-09

2008-01-31 Sarka Todorova <sarka.todorova@cern.ch>
	* fix the identification of CSC stations
	* tagged as MuonTrackingGeometry-00-01-08

2008-01-31 Sarka Todorova <sarka.todorova@cern.ch>
	* modify coding of secondary coordinate for stations with cutouts (BOG)
	* tagged as MuonTrackingGeometry-00-01-07

2008-01-29 Sarka Todorova <sarka.todorova@cern.ch>
	* don't retrieve TrackingVolumesSvc unless needed (suppress error messages)
	* tagged as MuonTrackingGeometry-00-01-06

2008-01-24 Sarka Todorova <sarka.todorova@cern.ch>
	* add option to load MSEntry from TrackingVolumesSvc
	* bugfix in MIMB (volume bounds called after delete )
	* tagged as MuonTrackingGeometry-00-01-05

2008-01-22 Sarka Todorova <sarka.todorova@cern.ch>
	* fix configuration python file
	* tagged as MuonTrackingGeometry-00-01-04

2008-01-21 Sarka Todorova <sarka.todorova@cern.ch>
	* configuration python file
	* tagged as MuonTrackingGeometry-00-01-03

2008-01-15 Sarka Todorova <sarka.todorova@cern.ch>
	* added configuration file; to be used both by muon-standalone and combined geometry
	* tagged as MuonTrackingGeometry-00-01-02

2008-01-09 Sarka Todorova <sarka.todorova@cern.ch>
	* change gluing order in MTGB (temporary solution, better to fix it in TrackingVolumeHelper )
	* 3D partition runs into infinite loops, probably due to bug in BevelledCylinderVolumeBounds, use 2D partition as default till fixed
	* tagged as MuonTrackingGeometry-00-01-01

2008-01-08 Sarka Todorova <sarka.todorova@cern.ch>
	* code simplified inert material (optional)
	* add various options (resize,rescale, blend material into static volume material properties), not all have public switch yet
	* tagged as MuonTrackingGeometry-00-01-00

2007-12-29 Sarka Todorova <sarka.todorova@cern.ch>
	* fix memory leaks in MSB/MSTB
	* fix material scaling for station layer representation